--- a/test/dummy/app/views/users/index.html.erb
+++ b/test/dummy/app/views/users/index.html.erb
@@ -41,30 +41,11 @@
   <span class="icon icon-left"></span>
 </div>
 
-<h1>Listing users</h1>
+<ul class="table-view">
+  <% @users.each do |user| %>
+    <li class="table-view-cell"><%= user.name %></li>
+    <li class="table-view-cell table-view-cell"><%= user.email %></li>
+  <% end %>
+</ul>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @users.each do |user| %>
-      <tr>
-        <td><%= user.name %></td>
-        <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New User', new_user_path %>
+<%= link_to 'New User', new_user_path, data: {ignore: "push" } %>
